# QEngine

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  qengine.cpp  qengine.hpp  qimages.cpp  qimages.hpp  qinitializers.cpp  qinitializers.hpp  qtypes.hpp
